--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -25,9 +25,7 @@ jobs:
 
       - name: Install cURL Headers
         shell: 'script --return --quiet --command "bash {0}"'
-        run: curl https://curl.haxx.se/download/curl-$V.tar.gz | sudo tar xz -C /usr --strip-components=1 curl-$V/include
-        env:
-          V: 7.58.0
+        run: sudo apt-get install libcurl4-openssl-dev
       - name: Install dependencies
         shell: 'script --return --quiet --command "bash {0}"'
         run: bundle install
