--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install cURL Headers
         shell: 'script --return --quiet --command "bash {0}"'
-        run: sudo apt-get install libcurl4-openssl-dev
+        run: sudo apt-get install libcurl3 libcurl3-gnutls libcurl4-openssl-dev
       - name: Install dependencies
         shell: 'script --return --quiet --command "bash {0}"'
         run: bundle install
