--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -34,4 +34,4 @@ jobs:
         run: bundle install
       - name: Run tests
         shell: 'script --return --quiet --command "bash {0}"'
-        run: rspec spec/rwby.rb
+        run: rspec spec
